# simple-rust-api

./: Cargo.toml  DATABASE_SETUP.md  README.md
migrations/: 20240101000001_create_items_table.sql
src/: main.rs
src/config/: config.rs  local.yml
src/handler/: item.rs
src/middleware/: cors.rs  error_handler.rs  mod.rs
src/models/: item.rs
src/repository/: item.rs  mod.rs  postgres.rs
src/routes/: item_routes.rs  mod.rs
