[package]
name = "simple-rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
serde_yaml = "0.9.34+deprecated"
axum = "0.8.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["timeout"] }